Release Notes

* 11/22/2016
  * fixed AtlasAJB to use configurator tables instead of schedconfig.space

* 11/16/2016
  * changed AtlasAW to use PRESTAGE_LIMIT
  * added a hint to setDelFlag
  * using 1 for negative ramCount
  * fixed AtlasPJB for no-input tasks

* 11/14/2016
  * changed outDiskCount not to scale with workDiskCount

* 11/9/2016
  * changed AtlasPTB not to ignore job execution ability
  * introduced cutoff based on ioIntensity and mbToMove in AtlasPJB

* 11/7/2016
  * changed JG not to use compact input params for user's trf jobs

* 10/28/2016
  * changed AtlasDDM to work with DN mapped to multiple rucio accounts

* 10/17/2016
  * removing multi-byte characters from task params
  * added eventRatio

* 10/6/2016
  * added addEsParams
  * support for reassignTaskToNucleus=None

* 9/30/2016
  * changed tobeprocess for ratio in float
  * changed ratio of output to check boundaryID

* 9/29/2016
  * added support ratio for output datasets

* 9/21/2016
  * changed AtlasPTB to use deep in list_dataset_replicas for primary dataset replica lookup

* 9/16/2016
  * setting DEL to event ranges

* 9/13/2016
  * using maxPSS for analy tasks

* 9/2/2016
  * using cloneJobs for ES even with nConsumer=1

* 8/29/2016
  * changed analysis to work with containers of containers

* 8/1/2016
  * using campaign in WQ 

* 7/29/2016
  * fixed AtlasPJB to use score queues for pmerge even if site is specified

* 7/25/2016
  * fixed IC for cpuEfficiency=0
  * tagging of shares

* 7/19/2016
  * changed TRB to check boolean value of noWaitParent
  * changed IC for NG+NF+LB

* 7/14/2016
  * setting old modtime in JG for high prio + running + one or more reset
  * using bulk increment in getOutput
  * using bulk fetch and insert for files in JG

* 7/12/2016
  * changed AtlasTS and AtlasPPP to register and delete ES datasets

* 7/11/2016
  * added jumbo job stuff
  * added requestType
  * added getOldMergeJobPandaIDs

* 7/7/2016
  * added removeTags to AtlasAPP

* 7/5/2016