@@ -1,5 +1,9 @@
 Release Notes
 
+* 11/24/2016
+  * disabled transfer backlog check when negative T1 weight in AtlasPTB
+  * changed thresholds for data availability check configurable in AtlasPTB
+
 * 11/22/2016
   * fixed AtlasAJB to use configurator tables instead of schedconfig.space
 
